# build-gn

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILD.gn  README.md  azure-pipelines-template.yml  azure-pipelines.yml
.github/workflows/: main.yml
build_overrides/: build.gni  gtest.gni  partition_alloc.gni
buildtools/: deps_revisions.gni
examples/buildflag/: BUILD.gn  main.cc
examples/gtest/: BUILD.gn
examples/libcxx/: main.cc
examples/simple/: BUILD.gn  main.cc
scripts/: bootstrap.js  build.js  common.js  create_dist.js  test.js  update_gn.js
scripts/libs/: extract-zip.js  fs-extra.js  jszip.js
tools/clang/scripts/: update.py
