# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Variable that can be used to support multiple build scenarios, like having
# Chromium specific targets in a client project's GN file etc.
build_with_chromium = false

# Some non-Chromium builds don't support building java targets.
enable_java_templates = false

# Some non-Chromium builds don't use Chromium's third_party/binutils.
linux_use_bundled_binutils_override = false

# Tracing support requires //third_party/perfetto, which is not available in
# libchrome (CrOS's version of //base). This flag can disable tracing support
# altogether, in which case all tracing instrumentation in //base becomes a
# no-op.
# TODO(crbug/1065905): Add dependency on perfetto to support typed events.
enable_base_tracing = false

# Switches the TRACE_EVENT instrumentation from base's TraceLog implementation
# to //third_party/perfetto's client library. Not implemented yet, currently a
# no-op to set up trybot infrastructure.
# TODO(crbug/1006769): Switch to perfetto's client library.
use_perfetto_client_library = false

# Android 32-bit non-component, non-clang builds cannot have symbol_level=2
# due to 4GiB file size limit, see https://crbug.com/648948.
# Set this flag to true to skip the assertion.
ignore_elf32_limitations = false

# Use the system install of Xcode for tools like ibtool, libtool, etc.
# This does not affect the compiler. When this variable is false, targets will
# instead use a hermetic install of Xcode. [The hermetic install can be
# obtained with gclient sync after setting the environment variable
# FORCE_MAC_TOOLCHAIN].
use_system_xcode = true
